Cherry-picked 6456ee05375103a63c6a8bebe9b3241f96525875

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23303,5 +23303,35 @@
         <target>Du hast die Nachricht auf dem Schwarzen Brett an den Raben gemeldet. Wer weiß, vielleicht wird deren Verfasser heute Nacht stääärben...</target>
       </segment>
     </unit>
+      <unit id="G3CtrOz" name="Vor.">
+          <notes>
+              <note category="german">Vor.</note>
+              <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+          </notes>
+          <segment>
+              <source>Vor.</source>
+              <target>Stk.</target>
+          </segment>
+      </unit>
+      <unit id="g1XSymV" name="Anz.">
+          <notes>
+              <note category="german">Anz.</note>
+              <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+          </notes>
+          <segment>
+              <source>Anz.</source>
+              <target>Stk.</target>
+          </segment>
+      </unit>
+      <unit id="kVopbOG" name="Handeln">
+          <notes>
+              <note category="german">Handeln</note>
+              <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+          </notes>
+          <segment>
+              <source>Handeln</source>
+              <target>Acción</target>
+          </segment>
+      </unit>
   </file>
 </xliff>
