--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4975,7 +4975,7 @@
       </notes>
       <segment>
         <source>Du hast in dieser Stadt zusammen gespielt</source>
-        <target>Vous avez jouez ensemble dans cette ville</target>
+        <target>Vous avez joué ensemble dans cette ville</target>
       </segment>
     </unit>
   </file>
