--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -22124,31 +22124,22 @@
         <target>Du hast die Nachricht auf dem Schwarzen Brett an den Raben gemeldet. Wer weiß, vielleicht wird deren Verfasser heute Nacht stääärben...</target>
       </segment>
     </unit>
-    <unit id="G3CtrOz" name="Vor.">
+    <unit id="qrK4heb" name="Infos">
       <notes>
-        <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
       </notes>
       <segment>
-        <source>Vor.</source>
-        <target>Vor.</target>
+        <source>Infos</source>
+        <target>Infos</target>
       </segment>
     </unit>
-    <unit id="g1XSymV" name="Anz.">
+    <unit id="Vlb5Lbe" name="Aktionen">
       <notes>
-        <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
       </notes>
       <segment>
-        <source>Anz.</source>
-        <target>Anz.</target>
-      </segment>
-    </unit>
-    <unit id="kVopbOG" name="Handeln">
-      <notes>
-        <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
-      </notes>
-      <segment>
-        <source>Handeln</source>
-        <target>Handeln</target>
+        <source>Aktionen</source>
+        <target>Aktionen</target>
       </segment>
     </unit>
   </file>
