--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23332,34 +23332,25 @@
         <target>Du hast die Nachricht auf dem Schwarzen Brett an den Raben gemeldet. Wer weiß, vielleicht wird deren Verfasser heute Nacht stääärben...</target>
       </segment>
     </unit>
-    <unit id="G3CtrOz" name="Vor.">
+    <unit id="qrK4heb" name="Infos">
       <notes>
-        <note category="german">Vor.</note>
-        <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+        <note category="german">Infos</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
-        <source>Vor.</source>
-        <target>Stk.</target>
+        <source>Infos</source>
+        <target>Infos</target>
       </segment>
     </unit>
-    <unit id="g1XSymV" name="Anz.">
+    <unit id="Vlb5Lbe" name="Aktionen">
       <notes>
-        <note category="german">Anz.</note>
-        <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
+        <note category="german">Aktionen</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
       </notes>
       <segment>
-        <source>Anz.</source>
-        <target>Stk.</target>
-      </segment>
-    </unit>
-    <unit id="kVopbOG" name="Handeln">
-      <notes>
-        <note category="german">Handeln</note>
-        <note category="from">twig:///templates/ajax/game/town/workshop.html.twig</note>
-      </notes>
-      <segment>
-        <source>Handeln</source>
-        <target>Acción</target>
+        <source>Aktionen</source>
+        <target>AktiAccionesonen</target>
       </segment>
     </unit>
   </file>
