--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9067,11 +9067,11 @@
       <notes>
         <note category="german">Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</note>
         <note category="from">db://Requirement</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</source>
-        <target>Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</target>
+        <target>Warning, overplaying is as bad as not playing at all, and one of the townspeople has already played it today. Your ears wouldn't be able to handle it!</target>
       </segment>
     </unit>
     <unit id="VXFJxzy">
