--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -21377,24 +21377,6 @@
         <target>{citizen} hat das Gebäude {plan} repariert (Sklaverei: +50% AP).</target>
       </segment>
     </unit>
-    <unit id="hq.m1hn" name="Ein Moderator hat deinen Thread &quot;{threadname}&quot; geschlossen. {link_post}">
-      <notes>
-        <note category="from">db://LogEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Ein Moderator hat deinen Thread "{threadname}" geschlossen. {link_post}</source>
-        <target>Ein Moderator hat deinen Thread "{threadname}" geschlossen. {link_post}</target>
-      </segment>
-    </unit>
-    <unit id="AEFBcgF">
-      <notes>
-        <note category="from">db://LogEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</source>
-        <target>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</target>
-      </segment>
-    </unit>
     <unit id="4zy_n9Y" name="Funkgerät verwenden">
       <notes>
         <note category="from">twig:///templates/ajax/public/maintenance_attack.html.twig</note>
@@ -22140,6 +22122,24 @@
       <segment>
         <source>Aktionen</source>
         <target>Aktionen</target>
+      </segment>
+    </unit>
+    <unit id="AApRbvy">
+      <notes>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" geschlossen. Grund: "{reason}" {link_post}</source>
+        <target>Ein Moderator hat deinen Thread "{threadname}" geschlossen. Grund: "{reason}" {link_post}</target>
+      </segment>
+    </unit>
+    <unit id="tMO07PV">
+      <notes>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. Grund: "{reason}" {link_post}</source>
+        <target>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. Grund: "{reason}" {link_post}</target>
       </segment>
     </unit>
   </file>
