--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22480,26 +22480,6 @@
         <target>{citizen} ha reparado la construcción {plan} (Esclavitud: +50% PA).</target>
       </segment>
     </unit>
-    <unit id="hq.m1hn" name="Ein Moderator hat deinen Thread &quot;{threadname}&quot; geschlossen. {link_post}">
-      <notes>
-        <note category="german">Ein Moderator hat deinen Thread "{threadname}" geschlossen. {link_post}</note>
-        <note category="from">db://LogEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Ein Moderator hat deinen Thread "{threadname}" geschlossen. {link_post}</source>
-        <target>Un moderador ha cerrado tu tema "{threadname}". {link_post}</target>
-      </segment>
-    </unit>
-    <unit id="AEFBcgF">
-      <notes>
-        <note category="german">Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</note>
-        <note category="from">db://LogEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. {link_post}</source>
-        <target>Un moderador ha marcado tu tema "{threadname}" como "Resuelto". {link_post}</target>
-      </segment>
-    </unit>
     <unit id="4zy_n9Y" name="Funkgerät verwenden">
       <notes>
         <note category="german">Funkgerät verwenden</note>
@@ -23348,7 +23328,27 @@
       </notes>
       <segment>
         <source>Aktionen</source>
-        <target>AktiAccionesonen</target>
+        <target>Acciones</target>
+      </segment>
+    </unit>
+    <unit id="AApRbvy">
+      <notes>
+        <note category="german">Ein Moderator hat deinen Thread "{threadname}" geschlossen. Grund: "{reason}" {link_post}</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" geschlossen. Grund: "{reason}" {link_post}</source>
+        <target>Un moderador ha cerrado tu tema "{threadname}". Razón: "{reason}" {link_post}</target>
+      </segment>
+    </unit>
+    <unit id="tMO07PV">
+      <notes>
+        <note category="german">Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. Grund: "{reason}" {link_post}</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" als "Gelöst" markiert. Grund: "{reason}" {link_post}</source>
+        <target>Un moderador ha marcado tu tema "{threadname}" como "Resuelto". Razón: "{reason}" {link_post}</target>
       </segment>
     </unit>
   </file>
