--- a/translations/soul+intl-icu.de.xlf
+++ b/translations/soul+intl-icu.de.xlf
@@ -4561,5 +4561,14 @@
         <target>Ich habe keine besondere Meinung zu dieser Frage.</target>
       </segment>
     </unit>
+    <unit id="ALrkXd_" name="Du kannst nur eine Antwort auswählen.">
+      <notes>
+        <note category="from">twig:///templates/ajax/soul/polls.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du kannst nur eine Antwort auswählen.</source>
+        <target>Du kannst nur eine Antwort auswählen.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
