--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -4972,5 +4972,15 @@
         <target>I don't have any particular opinion on this topic.</target>
       </segment>
     </unit>
+    <unit id="ALrkXd_" name="Du kannst nur eine Antwort auswählen.">
+      <notes>
+        <note category="german">Du kannst nur eine Antwort auswählen.</note>
+        <note category="from">twig:///templates/ajax/soul/polls.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du kannst nur eine Antwort auswählen.</source>
+        <target>You can only select a single answer.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
